

## [v0.6.0.dev0]
### Added:
 - [fpavogt, 2022-10-19] Add scipy to the list of required dependencies.
 - [fpavogt, 2022-10-19] The metarize routine now also computes the "fluffiness" of cloud layers.
 - [fpavogt, 2022-10-18] Add option to use a percentage of the most recent measurements to derive the base altitude.
 - [fpavogt, 2022-10-18] Add 3 new scientific validation cases.
### Fixed:
 - [fpavogt, 2023-07-07] Fix #95 (pylint 3.0 deprecation of epylinter)
 - [fpavogt, 2023-07-03] Fix #98 (pkg_resources -> packaging in test_version.py).
 - [fpavogt, 2022-10-18] Fix #84 and #85.
### Changed:
 - [fpavogt, 2023-07-26] Require layers to be at least 250ft appart before splitting a group.
 - [fpavogt, 2023-07-13] Deployment of the new Issue form in YAML format (fixes #93).
 - [fpavogt, 2023-07-07] Demo datasets are now stored as csv and not pkl (fixes #102).
 - [fpavogt, 2022-12-16] Replace OKTA_LIM0 (OKTA_LIM8) with MIN_HITS_OKTA0 (MAX_HOLES_OKTA8) - fixes #92.
 - [fpavogt, 2022-10-20] Remove superfluous parameters from the default set.
 - [fpavogt, 2022-10-18] Fluffiness is now computed via LOWESS instead of a Convex Hull.
 - [fpavogt, 2022-10-18] Base level is now defined as a percentile of the total number of points.
 - [fpavogt, 2022-10-18] Enable multiple min_sep_vals for the LAYERING step.
 - [fpavogt, 2022-10-18] Cleanup pylint and error messages.
 - [fpavogt, 2022-10-18] Use min/max+padding to assess if slices are overlapping, instead of mean+std.
 - [fpavogt, 2022-10-18] Default value of OKTA_LIM8 is changed from 98 to 99.
### Deprecated:
### Removed:
### Security:

## [v0.5.0.dev0]
### Fixed:
 - [fpavogt, 2022-07-08] Fix #78 and #79.

## [v0.4.0.dev0]
### Added:
 - [fpavogt, 2022-02-27] Add new speed-check Action.
 - [fpavogt, 2022-02-25] Add the `prms` keyword to set parameters for each run call in a thread-safe manner.
### Fixed:
 - [fpavogt, 2022-03-02] Fix #75.
 - [fpavogt, 2022-02-25] Fix #71 and #25.
### Removed: